--- a/frontend-templating/index.html
+++ b/frontend-templating/index.html
@@ -16,13 +16,12 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-
     <header>
         <h1>Frontend Templating</h1>
         <ul>
-            <li><a>Handlebars</a></li>
-            <li><a>Angular</a></li>
-            <li><a>React</a></li>
+            <li><a href="demos/handlebars/index.html">Handlebars</a></li>
+            <li><a href="demos/angular/index.html">Angular</a></li>
+            <li><a href="demos/react/index.html">React</a></li>
         </ul>
     </header>
 
