--- a/frontend-templating/demos/angular/index.html
+++ b/frontend-templating/demos/angular/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>    
     <a href="../../index.html">back</a>
+
+
+    <div data-ng-app="app">
+
+    </div>
+    <script src="../../lib/angular.js"></script>
+    <script src="../../lib/angular-route.js"></script>
 </body>
 </html>
