--- a/frontend-templating/demos/react/index.html
+++ b/frontend-templating/demos/react/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
     <a href="../../index.html">back</a>
+
+    <div id="root">
+
+    </div>
+
+    <script src="../../node_modules/react/dist/react.js"></script>
+    <script src="../../node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="../../dist/react.js"></script>
 </body>
 </html>
